# portfolio

./: docker-compose.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/components/ChatBot/: ChatBot.tsx
client/src/components/Experience/: Experience.tsx  ExperienceCard.tsx  types.ts
client/src/components/Footer/: Footer.tsx
client/src/components/Header/: Header.tsx
client/src/components/Landing/: Landing.tsx
client/src/components/Projects/: ProjectItem.tsx  ProjectList.tsx  types.ts
client/src/components/Skills/: SkillGroup.tsx  SkillItem.tsx  Skills.tsx  types.ts
server/: Dockerfile  main.py  pyproject.toml
server/database/: postgres.py
server/models/: portfolio_models.py
server/routes/: portfolio_routes.py
